--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
+    "react-lines-ellipsis": "^0.14.1",
+    "react-moment": "^1.1.1",
+    "react-player": "^2.8.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "styled-components": "^5.2.1",
