--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -20,9 +22,11 @@
     "react-player": "^2.8.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "reactn": "^2.2.7",
     "styled-components": "^5.2.1",
     "typescript": "^4.0.3",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "wouter": "^2.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
