--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
-    "axios": "^0.22.0",
+    "axios": "^1.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
@@ -19,9 +19,9 @@
     "react-moment": "^1.1.1",
     "react-player": "^2.8.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^5.0.1",
     "react-switch": "^6.0.0",
-    "styled-components": "^5.2.1",
+    "styled-components": "^6.1.11",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
@@ -45,6 +45,10 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.6",
-    "@types/styled-components": "^5.1.5"
+    "@types/styled-components": "^5.1.34"
+  },
+  "resolutions": {
+    "react": "18.x.x",
+    "@types/react": "18.x.x"
   }
 }
