--- a/package.json
+++ b/package.json
@@ -1,56 +1,56 @@
 {
-  "name": "portfolio",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.14.60",
-    "@types/react-dom": "^16.9.24",
-    "axios": "^1.7.2",
-    "portfolio": "file:",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0",
-    "react-icons": "^4.1.0",
-    "react-lines-ellipsis": "^0.14.1",
-    "react-moment": "^1.1.1",
-    "react-player": "^2.8.2",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^5.0.1",
-    "react-switch": "^6.0.0",
-    "styled-components": "^6.1.11",
-    "typescript": "^4.0.3",
-    "web-vitals": "^0.2.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@types/react-router-dom": "^5.1.6",
-    "@types/styled-components": "^5.1.34"
-  },
-  "resolutions": {
-    "react": "18.x.x",
-    "@types/react": "18.x.x"
-  }
+    "name": "portfolio",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@testing-library/jest-dom": "^5.11.4",
+        "@testing-library/react": "^11.1.0",
+        "@testing-library/user-event": "^12.1.10",
+        "@types/jest": "^26.0.15",
+        "axios": "^1.7.2",
+        "portfolio": "file:",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-helmet": "^6.1.0",
+        "react-icons": "^4.1.0",
+        "react-lines-ellipsis": "^0.14.1",
+        "react-moment": "^1.1.1",
+        "react-player": "^2.8.2",
+        "react-router-dom": "^5.2.0",
+        "react-switch": "^6.0.0",
+        "styled-components": "^6.1.11",
+        "typescript": "^4.0.3",
+        "web-vitals": "^0.2.4"
+    },
+    "scripts": {
+        "dev": "vite --host",
+        "build": "vite build",
+        "preview": "vite preview"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+        "@types/node": "^22.5.3",
+        "@types/react": "^18.3.5",
+        "@types/react-dom": "^18.3.0",
+        "@types/react-router-dom": "^5.1.6",
+        "@types/styled-components": "^5.1.34",
+        "@vitejs/plugin-react": "^4.3.1",
+        "vite": "^5.4.3"
+    },
+    "resolutions": {
+        "react": "18.x.x",
+        "@types/react": "18.x.x"
+    }
 }
