refactor: Update image size and shape in about and works pages

--- a/.hintrc
+++ b/.hintrc
@@ -9,6 +9,13 @@
       {
         "nested-interactive": "off"
       }
-    ]
+    ],
+    "axe/name-role-value": [
+      "default",
+      {
+        "link-name": "off"
+      }
+    ],
+    "disown-opener": "off"
   }
 }
